# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.439 2005/12/08 22:23:31 rocket Exp $

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  remove extra self.env={} that was resetting the environment to null

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Fix appending livecd use flag if no use flag is specified in livecd-stage1
  spec file

  08 Dec 2005; Eric Edgar <rocket@gentoo.org> modules/generic_target.py:
  Add a default path to the environment in the chroot

  08 Dec 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/embedded/embedded-chroot.sh,
  targets/grp/grp-chroot.sh, targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  -targets/livecd-stage2/unmerge.sh, targets/netboot/netboot-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage2/stage2-chroot.sh,
  targets/stage2/stage2-preclean-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/stage3/stage3-preclean-chroot.sh, targets/stage4/stage4-chroot.sh,
  targets/stage4/stage4-controller.sh, -targets/stage4/unmerge.sh,
  targets/support/chroot-functions.sh, targets/support/pre-kmerge.sh,
  +targets/support/unmerge.sh, targets/tinderbox/tinderbox-chroot.sh:
  move unmerge.sh to support;move the CLEAN_DELAY,EMERGE_WARNING_DELAY, and
  CONFIG_PROTECT stuff in the run_emerge function for cleanliness

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.1:
  Fixed up the man page, which has been suffering for some time, and also
  reversed -v/-V in the help message.

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added fun gnome theme stuff to livecdfs-update.sh for the official Gentoo
  LiveCD.

  08 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf: